- Adjusted admissions.html to handle error - Added functions for input error handling and sending data to API - Added function to sync country codes - Added styles for error - Adjusted email formatting in server.js

--- a/public/Main.css
+++ b/public/Main.css
@@ -683,6 +683,14 @@ tbody td img{
     font-size: 60px;
 }
 
+.radio-box {
+    transition: border 0.1s ease-in-out; 
+}
+
+.radio-box-error {
+    border: 1px solid red !important;
+}
+
 @media (max-width: 1200px) { /* Large devices (laptops, desktops) */
     .responsive-header {
         font-size: 40px;
